--- a/_config.yml
+++ b/_config.yml
@@ -20,10 +20,10 @@ title: "In-class: MUSA 620: Data Wrangling and Data Visualization"
 title_separator: "-"
 name: "He Zhang"
 description: "In-class Test: Displaying cool data visualizations"
-url: # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
-baseurl: # the subpath of your site, e.g. "/blog"
-repository: # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
-teaser: # path of fallback teaser image, e.g. "/assets/images/500x300.png"
+url: "https:HeZHANG0.github.io/"
+baseurl: "/test"
+repository: "HeZHANG0/in-class-1126" # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
+teaser: "/assets/images/scatterplot.json" # path of fallback teaser image, e.g. "/assets/images/500x300.png"
 logo: # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
 masthead_title: test page # overrides the website title displayed in the masthead, use " " for no title
 # breadcrumbs            : false # true, false (default)
