--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ title: "In-class: MUSA 620: Data Wrangling and Data Visualization"
 title_separator: "-"
 name: "He Zhang"
 description: "In-class Test: Displaying cool data visualizations"
-url: "https:HeZHANG0.github.io/"
+url: "https://hezhang0.github.io/in-class-1126/"
 baseurl: "/test"
 repository: "HeZHANG0/in-class-1126" # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser: "/assets/images/scatterplot.json" # path of fallback teaser image, e.g. "/assets/images/500x300.png"
