--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ title_separator: "-"
 name: "He Zhang"
 description: "In-class Test: Displaying cool data visualizations"
 url: "https://hezhang0.github.io/in-class-1126/"
-baseurl: "/test"
+baseurl: ""
 repository: "HeZHANG0/in-class-1126" # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser: "/assets/images/scatterplot.json" # path of fallback teaser image, e.g. "/assets/images/500x300.png"
 logo: # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
